Add confirmation page

--- a/src/app/components/confimation/confimation.component.html
+++ b/src/app/components/confimation/confimation.component.html
@@ -1,1 +1,7 @@
-<p>confimation works!</p>
+<div class=" h-50 shadow rounded m-auto text-center p-4 mt-5">
+  <p class="text-success display-5">Success🎉</p>
+  <h1>Thank you<span class="fw-bold text-capitalize"> {{checkoutInfo?.fullname}}</span></h1>
+  <h1>Your address<span class="fw-bold"> {{checkoutInfo?.address}}</span></h1>
+  <h1>Your order<span class="fw-bold text-success"> ${{checkoutInfo?.totalPrice}}</span> is confirmed</h1>
+  <h1>Please allow 1-3 business day(s) for shipping.</h1>
+</div>
