--- a/src/app/components/confimation/confimation.component.html
+++ b/src/app/components/confimation/confimation.component.html
@@ -4,4 +4,6 @@
   <h1>Your address<span class="fw-bold"> {{checkoutInfo?.address}}</span></h1>
   <h1>Your order<span class="fw-bold text-success"> ${{checkoutInfo?.totalPrice}}</span> is confirmed</h1>
   <h1>Please allow 1-3 business day(s) for shipping.</h1>
+
+  <button class="btn btn-primary" (click)="onClickBackToHandler()">Back to product list</button>
 </div>
