--- a/src/app/components/product-item-detail/product-item-detail.component.html
+++ b/src/app/components/product-item-detail/product-item-detail.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="product else loading" class="detail-container">
+<div *ngIf="product else loading" class="detail-container d-flex flex-wrap gap-3 pb-5">
   <img src="{{product.url}}" alt="" class="shadow">
-  <div class="detail-item ">
+  <div class="detail-item text-center d-flex flex-column justify-content-center">
     <h1>{{product.name}}</h1>
     <h2 class="fw-bold text-success">${{product.price}}</h2>
     <p>{{product.description}}</p>
